rsass/tests/spec/non_conformant/errors/import/file/mixin/simple/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/file/mixin/simple"

fn runner() -> crate::TestRunner {
    super::runner().with_cwd("simple")
}

mod inside;

mod outside;
